--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,9 +56,9 @@ set -g status-position bottom
 #set -g status-justify left
 set -g status-bg colour18
 set -g status-fg colour137
-set -g status-attr dim
+set -g status-attr default
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour8,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
+set -g status-right '#[fg=colour233,bg=colour8] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
 #set -g status-right-length 50
 #set -g status-left-length 20
 
